Top section are aligned correctly
Added padding around top section wrapper.
Use border-radius to change to corners of the button and picture.
Set body margin and padding to zero to remove Lines around content.
Change button border to none in order to change border.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
 box-sizing: border-box;
-/* margin-left: 300px; */
-/* margin-right:300px ; */
+margin: 0%;
+padding: 0%;
+font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
@@ -12,39 +13,44 @@ margin-bottom: 30px;
 
 }
 .logo {
-    font-size: 30px;
+font-size: 24px;
+color: #f9faf8;
 }
 
 .top-section {
 display: flex;
 flex-direction: column;
-width: 300px;
-height: 200px; 
-flex-shrink: 0;
+width: 600px;
+
+
 }
 
-.left {
+.right {
 flex-shrink: 0;
+color: #e5e7eb;
 }
-
-
 
 h2 {
-font-size: 29px;
+font-size: 48px;
+font-weight: 800 ;
+color: #f9faf8;
 }
 
 .text {
-margin-bottom: 9px;
+font-size: 18px ;
+color: #e5e7eb;
 }
 
 .top-wrapper {
 display: flex;
 justify-content: space-between;
+align-items: center;
 }
 
 img {
-    width: 300px;
-    height: 200px;    
+border-radius: 5px;
+height: 300px; 
+
 }
 
 ul {
@@ -56,8 +62,28 @@ gap: 16px;
 a {
 text-decoration: none;
 font-size: 20px;
+color: #f9faf8;
 }
 
 .top-background {
  background-color: #1f2937;
+ padding: 50px;
+ }
+
+button-wrap {
+
+}
+
+button {
+background-color: #498bf6 ;
+color: #e5e7eb; ;
+border: none;
+border-radius: 10px;
+padding-left: 20px;
+padding-right: 20px;
+display: flex;
+justify-content: center;
+align-items: center;
+font-size: 20px;
+margin-top: 25px ;
 }
